# generic_linkme

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml  poc.yml
impl/: Cargo.toml
impl/src/: attr.rs  declaration.rs  element.rs  lib.rs  linker.rs
src/: distributed_fn_slice.rs  lib.rs  link.rs  main.rs  private.rs
tests/: basic_fn_element.rs  generics.rs
