[package]
name = "generic_linkme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic-linkme-impl = { path = "impl" }
capstone = "0.11.0"
rand = "0.8.5"
once_cell = "1.17.2"

[[bin]]
name = "poc"
