[package]
name = "generic_linkme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic-linkme-impl = { path = "impl" }
capstone = "0.11.0"
rand = { version = "0.8.5", features = ["getrandom"] }
once_cell = "1.17.2"

[[bin]]
name = "poc"

[profile.opt-2]
inherits = "release"
opt-level = 2

[profile.lto-thin]
inherits = "release"
lto = "thin"
codegen-units = 1

[profile.lto-fat]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.strip-symbols]
inherits = "release"
strip = "symbols"
codegen-units = 1

[profile.opt-s]
inherits = "release"
strip = "symbols"
opt-level = "s"
codegen-units = 1
